Fixed a variable issue

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ function slow(event) {
 	var attached= document.getElementById("attached").value;     
 	var ipa= document.getElementById("ipa").value;     
 	var adda = document.getElementById("adda").value;                 
-	var reachz = document.getElementById("reacha").value;
+	var reacha = document.getElementById("reacha").value;
 	var ahand= document.getElementById("ahand").value;    
 	var errsa= document.getElementById("errsa").value;                 
 	var addz= document.getElementById("addz").value;     
